# ha-verisure-italy

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PKG_README.md  README.md  hacs.json  pyproject.toml
.claude/skills/close/: SKILL.md
.claude/skills/deploy/: SKILL.md
.claude/skills/investigate/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/start/: SKILL.md
.claude/skills/verisure-deploy/: SKILL.md
.claude/skills/verisure-investigate/: SKILL.md
.claude/skills/verisure-release/: SKILL.md
.claude/skills/verisure-review/: SKILL.md
.github/workflows/: ci.yml
custom_components/verisure_it/: __init__.py  alarm_control_panel.py  config_flow.py  const.py  coordinator.py  manifest.json
custom_components/verisure_it/translations/: en.json
custom_components/verisure_italy/: __init__.py  alarm_control_panel.py  button.py  camera.py  config_flow.py  const.py  coordinator.py  dashboard.py  manifest.json  services.yaml  strings.json
custom_components/verisure_italy/translations/: en.json
docs/: architecture-client.md  architecture-integration.md  automations.md  decisions.md  hacking.md  patterns.md  todo.md
docs/checkpoints/: 2026-04-17-cp01.md  2026-04-20-cp02.md  2026-04-21-cp03.md  2026-04-24-cp04.md  2026-04-24-cp05.md  2026-05-01-cp06.md  README.md
docs/findings/: README.md  arm-command-vocabulary.md  arm-exception-flow.md  camera-capture-tuning.md  cameras.md  configrepouser-partitions.md  panel-types.md  timeline-api.md  unavailable-flapping.md  verisure-api.md
docs/plans/: v0.8.3-probe-cli.md  v0.9.0-command-resolver.md  v0.9.2-interior-only-ha-states.md  v0.9.4-partition-gate.md
docs/reviews/: 2026-04-04-codebase-review-v2.md  2026-04-04-codebase-review.md  2026-04-04-post-v0.7.0-review.md  2026-04-24-codebase-review.md
docs/superpowers/plans/: 2026-04-02-ha-integration.md
docs/superpowers/specs/: 2026-04-02-ha-integration-design.md
scripts/: check.sh  dissect-web-bundle.sh  setup_dashboard.py  smoke_test.sh  verisure-italy-cli
tests/: test_alarm_panel_gate.py  test_architecture.py  test_camera.py  test_cli.py  test_client.py  test_coordinator.py  test_diagnostics.py  test_models.py  test_probe.py  test_resolver.py  test_responses.py  test_state_mapping.py
tests/fixtures/: probe_sdvecu_reference.json
verisure_api/: __init__.py  client.py  exceptions.py  graphql.py  models.py  responses.py
verisure_italy/: __init__.py  cli.py  client.py  diagnostics.py  exceptions.py  graphql.py  models.py  probe.py  resolver.py  responses.py
