[project]
name = "ha-verisure"
version = "0.1.0"
description = "Home Assistant custom component for Verisure Italy alarm systems"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "pydantic>=2.0",
    "pyjwt>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.2",
    "aioresponses>=0.7",
    "pyright>=1.1",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 5
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "N",         # pep8-naming
    "UP",        # pyupgrade
    "B",         # bugbear
    "A",         # builtins
    "T20",       # print
    "SIM",       # simplify
    "TCH",       # type-checking
    "RUF",       # ruff-specific
]
