[project]
name = "verisure-italy"
version = "0.3.2"
description = "Async Python client for the Verisure Italy alarm API"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Marcello Barnaba", email = "vjt@openssl.it"},
]
readme = "PKG_README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.9",
    "pydantic>=2.0",
    "pyjwt>=2.8",
]

[project.urls]
Homepage = "https://github.com/vjt/ha-verisure-italy"
Repository = "https://github.com/vjt/ha-verisure-italy"
Issues = "https://github.com/vjt/ha-verisure-italy/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.2",
    "aioresponses>=0.7",
    "homeassistant>=2026.2",
    "pyright>=1.1",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["verisure_italy*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 5
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "N",         # pep8-naming
    "UP",        # pyupgrade
    "B",         # bugbear
    "A",         # builtins
    "T20",       # print
    "SIM",       # simplify
    "TCH",       # type-checking
    "RUF",       # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
# HA integration uses `from __future__ import annotations` which makes ruff
# think all type annotations are type-checking-only. They're not — HomeAssistant,
# ConfigEntry, etc. are runtime function parameters.
"custom_components/**/*.py" = ["TCH002"]
